# fault_detector_spot

./: README.md  package.xml  setup.cfg  setup.py
config/: localization.yaml  mapping.rviz  mapping.yaml  my_tags.yaml  my_tags_sim.yaml  nav2_sim_params.yaml  nav2_spot_params.yaml  nav2_spot_params_amcl.yaml  nav2_spot_pointcloud_params.yaml  navigate_minimal.xml  spot_ros_config.yaml
documentation/: Boston_Dynamics_Description.md  Lastenheft.md  Requirements_Specification.md  System_Design.md  detailed_command_descriptions.md  interface_reference_document.md  tests_and_current_issues.md
fault_detector_spot/: arm_goal_navigator.py  move_to_tag.py  object_scanner.py  print_apriltags.py  sim_tests.py  spot_keyboard.py  tag_follower.py  wasd_arm.py
fault_detector_spot/behaviour_tree/: QOS_PROFILES.py  Tag_Command.py  __init__.py  bt_runner.py  command_ids.py  fault_detector_ui.py  generic_complex_command.py  manipulator_move_command.py  manipulator_tag_command.py  record_manager_node.py  rest_bridge.py  simple_command.py  timer_command.py
fault_detector_spot/modules/: arm_controller.py  move_to_tag_controller.py  move_to_tag_ui.py  spot_tag_to_arm_goal.py  spot_tag_to_arm_goal_ui.py  tag_transformer.py
launch/: apriltag_printer_launch.py  fault_detector_launch.py  localization_sim_merged_launch.py  merger_launch.py  nav2_sim_launch.py  nav2_spot_launch.py  nav2_spot_parallel_launch.py  navigation_sim_launch.py  navigation_sim_merged_launch.py  rtab_mapping_launch.py  sim_fault_detector_launch.py  slam_merged_launch.py  slam_sim_merged_launch.py
(+100 files in other folders)
