<?xml version="1.0"?>
<package format="3">
  <name>fault_detector_spot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mstemmeler@gmx.de">marcel</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_cmake</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>spot_ros2</exec_depend>
  <exec_depend>synchros2</exec_depend>
  <exec_depend>bosdyn_msgs</exec_depend>
  <exec_depend>spot_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
